provided boundingboxes are only for the sewuences in this scan -> not usable if from a different erspective -> conpute boundingboxes based on point clouds even though this might not be as eficient

--- a/preprocessing/scan3r/boundingboxVisuals.ipynb
+++ b/preprocessing/scan3r/boundingboxVisuals.ipynb
@@ -9,13 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "/local/home/ekoller/BT\n"
      ]
     }
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,65 +131,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "inside\n"
+      "pointclouds [[[-0.59        0.33       -1.37169   ]\n",
+      "  [-0.15        0.03       -1.3653    ]\n",
+      "  [-0.49        0.89       -1.32779   ]\n",
+      "  ...\n",
+      "  [-0.25        0.17       -1.36572   ]\n",
+      "  [-0.53       -0.63       -1.40526   ]\n",
+      "  [ 0.31       -0.01       -1.37504   ]]\n",
+      "\n",
+      " [[ 0.00637379 -1.51       -0.19      ]\n",
+      "  [ 0.21       -1.40829     0.71      ]\n",
+      "  [ 1.24037    -0.85        0.63      ]\n",
+      "  ...\n",
+      "  [ 0.49       -1.21343    -0.15      ]\n",
+      "  [ 0.99       -0.973429   -0.47      ]\n",
+      "  [ 0.23       -1.36129     0.13      ]]\n",
+      "\n",
+      " [[ 0.431595    0.71        0.77      ]\n",
+      "  [ 1.22549    -0.83        0.19      ]\n",
+      "  [ 0.98647    -0.35       -0.43      ]\n",
+      "  ...\n",
+      "  [ 0.87       -0.15526     0.19      ]\n",
+      "  [ 1.15351    -0.63        0.01      ]\n",
+      "  [ 0.51        0.450151   -0.49      ]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[-0.51       -0.860381   -1.29      ]\n",
+      "  [-0.47       -0.75       -1.37586   ]\n",
+      "  [-0.39       -0.83       -1.32334   ]\n",
+      "  ...\n",
+      "  [-0.45       -0.738874   -1.37      ]\n",
+      "  [-0.41       -0.81       -1.31512   ]\n",
+      "  [-0.43       -0.83       -1.20119   ]]\n",
+      "\n",
+      " [[-0.51       -0.81       -0.844653  ]\n",
+      "  [-0.53       -0.877892   -0.93      ]\n",
+      "  [-0.51       -0.83       -0.979709  ]\n",
+      "  ...\n",
+      "  [-0.53       -0.81       -0.836363  ]\n",
+      "  [-0.49       -0.778502   -0.91      ]\n",
+      "  [-0.51       -0.861233   -0.93      ]]\n",
+      "\n",
+      " [[-0.25        0.99       -1.38078   ]\n",
+      "  [-0.29        0.93       -1.35647   ]\n",
+      "  [-0.39        0.65       -1.38528   ]\n",
+      "  ...\n",
+      "  [-0.33        0.69       -1.35834   ]\n",
+      "  [-0.29        0.97       -1.35117   ]\n",
+      "  [-0.45        0.91       -1.32449   ]]]\n"
      ]
     }
    ],
    "source": [
+    "#visualize the bounding boxes and the corresponding mesh\n",
+    "\n",
+    "\n",
     "scan_id = \"02b33dfb-be2b-2d54-92d2-cd012b2b3c40\"\n",
     "data_dir = '/local/home/ekoller/R3Scan'\n",
     "frame_id = \"000002\"\n",
     "bounding_boxes = [] \n",
     "json_bounding_box = osp.join(data_dir, 'scenes', scan_id, 'semseg.v2.json')\n",
-    "with open(json_bounding_box, 'r') as file:\n",
-    "            data = json.load(file)\n",
     "\n",
-    "            for object in data['segGroups']:\n",
-    "                #get the current id\n",
-    "                if object[\"objectId\"] == 3:\n",
-    "                    print(\"inside\")\n",
-    "                    # the axes lengths give the length in each direction of one axis -> from centroid we have to move in \n",
-    "                    # both  directions of x in + and -\n",
-    "                    axes_lengths = object['obb']['axesLengths']\n",
+    "#curr = 3\n",
     "\n",
-    "                    # the normaliyed axis are the directions in which the boundingbox points to in comparison to the coord system\n",
-    "                    #we can use them to create a transformationmatrix! every row is one of the vector\n",
-    "                    normalized_axes = object['obb'][\"normalizedAxes\"]\n",
+    "# with open(json_bounding_box, 'r') as file:\n",
+    "#             data = json.load(file)\n",
     "\n",
-    "                    #construct the matrix using collumnformat ( each vecor becomes a collumn based on 2d example)\n",
-    "                    matrix = np.reshape(normalized_axes, (3,3), order= \"F\")\n",
+    "#             for object in data['segGroups']:\n",
+    "#                 #get the current id\n",
+    "#                 if object[\"objectId\"] == curr:\n",
+    "#                     print(\"inside\")\n",
+    "#                     # the axes lengths give the length in each direction of one axis -> from centroid we have to move in \n",
+    "#                     # both  directions of x in + and -\n",
+    "#                     axes_lengths = object['obb']['axesLengths']\n",
     "\n",
-    "                    #compute the new axislengths\n",
-    "                    lengths = matrix.dot(axes_lengths)\n",
+    "#                     # the normaliyed axis are the directions in which the boundingbox points to in comparison to the coord system\n",
+    "#                     #we can use them to create a transformationmatrix! every row is one of the vector\n",
+    "#                     normalized_axes = object['obb'][\"normalizedAxes\"]\n",
+    "\n",
+    "#                     #construct the matrix using collumnformat ( each vecor becomes a collumn based on 2d example)\n",
+    "#                     matrix = np.reshape(normalized_axes, (3,3), order= \"F\")\n",
+    "\n",
+    "#                     #compute the new axislengths\n",
+    "#                     lengths = matrix.dot(axes_lengths)\n",
     "                    \n",
-    "                    #the centriod of the object\n",
-    "                    centroid = object['obb'][\"centroid\"]\n",
+    "#                     #the centriod of the object\n",
+    "#                     centroid = object['obb'][\"centroid\"]\n",
     "\n",
-    "                    # calculate the new points one time in + direction one time in -\n",
-    "                    # get half of the lengths to add in each direction\n",
-    "                    points = np.zeros\n",
-    "                    half_lengths = lengths / 2.0\n",
+    "#                     # calculate the new points one time in + direction one time in -\n",
+    "#                     # get half of the lengths to add in each direction\n",
+    "#                     points = np.zeros\n",
+    "#                     half_lengths = lengths / 2.0\n",
     "\n",
-    "                    #not pretty bus shows clearly where it is going looks like the following BT/Illustrations\n",
-    "                    corners = np.array([\n",
-    "                    centroid + np.array([+1, +1, -1]) * half_lengths, #1\n",
-    "                    centroid + np.array([-1, +1, -1]) * half_lengths, #5\n",
-    "                    centroid + np.array([-1, -1, -1]) * half_lengths, #7\n",
-    "                    centroid + np.array([+1, -1, -1]) * half_lengths, #3\n",
-    "                    centroid + np.array([+1, +1, +1]) * half_lengths, #0\n",
-    "                    centroid + np.array([-1, +1, +1]) * half_lengths, #4\n",
-    "                    centroid + np.array([-1, -1, +1]) * half_lengths, #6\n",
-    "                    centroid + np.array([+1, -1, +1]) * half_lengths, #2  \n",
-    "                    ])\n",
-    "                    #add the cornerarray of the object to the bounding box\n",
-    "                    bounding_boxes.append(corners)"
+    "#                     #not pretty bus shows clearly where it is going looks like the following BT/Illustrations\n",
+    "#                     corners = np.array([\n",
+    "#                     centroid + np.array([+1, +1, -1]) * half_lengths, #1\n",
+    "#                     centroid + np.array([-1, +1, -1]) * half_lengths, #5\n",
+    "#                     centroid + np.array([-1, -1, -1]) * half_lengths, #7\n",
+    "#                     centroid + np.array([+1, -1, -1]) * half_lengths, #3\n",
+    "#                     centroid + np.array([+1, +1, +1]) * half_lengths, #0\n",
+    "#                     centroid + np.array([-1, +1, +1]) * half_lengths, #4\n",
+    "#                     centroid + np.array([-1, -1, +1]) * half_lengths, #6\n",
+    "#                     centroid + np.array([+1, -1, +1]) * half_lengths, #2  \n",
+    "#                     ])\n",
+    "#                     #add the cornerarray of the object to the bounding box\n",
+    "#                     bounding_boxes.append(corners)\n",
+    "\n",
+    "\n",
+    "#add mesh\n",
+    "#sanity check if the transformations overall actually do what they are supposed to do using visuals\n",
+    "\n",
+    "\"\"\"\n",
+    "Curr Mesh preparation and display adding\n",
+    "\"\"\"\n",
+    "pathToMesh = osp.join(data_dir,\"scenes\", scan_id, \"labels.instances.annotated.v2.ply\")\n",
+    "curr_mesh = o3d.io.read_triangle_mesh(pathToMesh)\n",
+    "# Visualize the mesh\n",
+    "\n",
+    "#check if it has colours\n",
+    "if not curr_mesh.has_vertex_colors():\n",
+    "    print(\"Mesh does not have vertex colors\")\n",
+    "    exit()\n",
+    "\n",
+    "#make sure the colours are a oke\n",
+    "colors = np.asarray(curr_mesh.vertex_colors)\n",
+    "if np.max(colors) > 1.0:  # Assuming colors are in the range [0, 255]\n",
+    "        colors /= 255.0\n",
+    "\n",
+    "#bruh swap the channels bc the colours from gt didn't match like zurias hint -> open: wtf does that mean for the rest\n",
+    "colors = np.asarray(curr_mesh.vertex_colors)\n",
+    "colors = colors[:, [2, 1, 0]]  # Swap red and blue channels\n",
+    "curr_mesh.vertex_colors = o3d.utility.Vector3dVector(colors)\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Display everything\n",
+    "\"\"\"\n",
+    "\n",
+    "##visualize everything\n",
+    "vis = o3d.visualization.Visualizer()\n",
+    "vis.create_window(width=800, height=600)\n",
+    "\n",
+    "vis.add_geometry(curr_mesh)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#load the data scan point cloud\n",
+    "pklfile = osp.join('/local/home/ekoller/R3Scan', 'files', 'orig', 'data', '{}.pkl'.format(scan_id) )\n",
+    "with open(pklfile, \"rb\") as f:\n",
+    "        # Load the data\n",
+    "        data = pickle.load(f)\n",
+    "        pointclouds = data['obj_points'][512]\n",
+    "       # bounding_boxes = data[\"bounding_boxes\"]\n",
+    "        object_id = data[\"objects_id\"]\n",
+    "print(\"pointclouds\", pointclouds)\n",
+    "\"\"\"\n",
+    "Compute the boundingboxes based on the pointclouds\n",
+    "\n",
+    "\"\"\"       \n",
+    "for pcl in pointclouds:\n",
+    "       # Find the minimum and maximum coordinates for each axis\n",
+    "        min_coords = np.min(pcl, axis=0) # - in the illustration\n",
+    "        max_coords = np.max(pcl, axis=0) # + in the illustration\n",
+    "\n",
+    "        corners = np.array([\n",
+    "        [min_coords[0], min_coords[1], min_coords[2]],  # Bottom-back-left\n",
+    "        [min_coords[0], min_coords[1], max_coords[2]],  # Top-back-left\n",
+    "        [min_coords[0], max_coords[1], min_coords[2]],  # Bottom-front-left\n",
+    "        [min_coords[0], max_coords[1], max_coords[2]],  # Top-front-left\n",
+    "        [max_coords[0], min_coords[1], min_coords[2]],  # Bottom-back-right\n",
+    "        [max_coords[0], min_coords[1], max_coords[2]],  # Top-back-right\n",
+    "        [max_coords[0], max_coords[1], min_coords[2]],  # Bottom-front-right\n",
+    "        [max_coords[0], max_coords[1], max_coords[2]]   # Top-front-right\n",
+    "        ])\n",
+    "        bounding_boxes.append(corners)\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "# Add each point cloud with its corresponding color 1 // reference\n",
+    "\n",
+    "for id,points in zip(object_id,pointclouds):\n",
+    "       \n",
+    "                #color = np.random.rand(3)\n",
+    "                color = np.array([0,0,0])\n",
+    "                pcd = o3d.geometry.PointCloud()\n",
+    "                pcd.points = o3d.utility.Vector3dVector(points)\n",
+    "                #color_vector = o3d.utility.Vector3dVector(color.astype(np.float64))\n",
+    "                pcd.colors = o3d.utility.Vector3dVector(np.tile(color, (len(points), 1))) \n",
+    "                vis.add_geometry(pcd)\n",
+    "\n",
+    "\n",
+    "#define the edges\n",
+    "edges = [ \n",
+    "    [0, 1], [1, 2], [2, 3], [3, 0],  # Bottom face\n",
+    "    [4, 5], [5, 6], [6, 7], [7, 4],  # Top face\n",
+    "    [0, 4], [1, 5], [2, 6], [3, 7]   # Connecting edges\n",
+    "    ]\n",
+    "\n",
+    "#convert the boundinbox into the new coordinate system // not necessary nos since the accessed data got preprocessed with this function\n",
+    "# bounding_boxes_2 = scan3r.get_box_in_ref_coord('/local/home/ekoller/R3Scan',bounding_boxes_2, \"fcf66d8a-622d-291c-8429-0e1109c6bb26\")\n",
+    "\n",
+    "#add boundingboxes 1 // reference\n",
+    "for bbox in bounding_boxes:\n",
+    "        bbox_color = np.array([0,255,0])\n",
+    "        line_set = o3d.geometry.LineSet()\n",
+    "        line_set.points.extend(o3d.utility.Vector3dVector(bbox))\n",
+    "        line_set.lines.extend(o3d.utility.Vector2iVector(edges))\n",
+    "        line_set.colors = o3d.utility.Vector3dVector([bbox_color] * len(edges))\n",
+    "        vis.add_geometry(line_set)\n",
+    "\n",
+    "# Run the visualizer\n",
+    "vis.run()\n",
+    "vis.destroy_window()\n"
    ]
   },
   {
@@ -226,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
