moved sam into preprocessing & adjusted the script

--- a/sceneGraph/graphUpdates/node_finding_curr.ipynb
+++ b/sceneGraph/graphUpdates/node_finding_curr.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "This codesegment focuses on the following: given a camera pose of the inputimage (new_scene), find the current nodes & edges in the camera view based on the current scenegraph\n",
     "\n",
-    "general idea: we have the current mesh & scene graph a node is basically a part of the mesh -> do the ray rhooting as in the ray intersection and find the nodes that it belongs to"
+    "general idea: we have the current mesh & scene graph a node is basically a part of the mesh -> do the ray rhooting as in the ray intersection and find the nodes that it belongs to\n",
+    "\n",
+    "unsued currently!!!"
    ]
   },
   {
