adjust for feature evaluation on closest image (currently handpicked instead of using the function)

--- a/preprocessing/feature_evaluation.ipynb
+++ b/preprocessing/feature_evaluation.ipynb
@@ -46,6 +46,8 @@
     "curr_scan_id = \"02b33e01-be2b-2d54-93fb-4145a709cec5\" \n",
     "new_scan_id =  \"fcf66d8a-622d-291c-8429-0e1109c6bb26\"\n",
     "frame_number = \"000008\"\n",
+    "curr_frame_number = \"000008\"\n",
+    "new_frame_number = \"000007\"\n",
     "patch_h= 18\n",
     "patch_w = 32\n",
     "patch_height = 30\n",
@@ -78,6 +80,8 @@
     "#iterate over everything and give back the closest match for every box in sam\n",
     "def of_all_find_closes_pairs(sg_dict, img_dict):\n",
     "    closest_pairs = {}\n",
+    "    print(\"sg_data object ids of image\", sg_dict.keys())\n",
+    "    print(\"img_data object ids of image\", img_dict.keys())\n",
     "\n",
     "    # print(\"input data sg dict\", sg_dict)\n",
     "    # print(\"input data img dict\", img_dict)\n",
@@ -187,14 +191,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{4: array([255, 127,  14], dtype=uint8), 18: array([ 23, 190, 207], dtype=uint8), 2: array([ 31, 119, 180], dtype=uint8), 0: array([0, 0, 0], dtype=uint8), 3: array([255, 187, 120], dtype=uint8), 1: array([174, 199, 232], dtype=uint8), 100: array([191,  63,  78], dtype=uint8), 16: array([188, 189,  34], dtype=uint8), 8: array([214,  39,  40], dtype=uint8), 9: array([197, 176, 213], dtype=uint8), 24: array([200,  54, 131], dtype=uint8), 25: array([ 92, 193,  61], dtype=uint8), 29: array([153,  98, 156], dtype=uint8), 6: array([ 44, 160,  44], dtype=uint8), 26: array([ 78,  71, 183], dtype=uint8), 10: array([148, 103, 189], dtype=uint8), 11: array([196, 156, 148], dtype=uint8), 23: array([ 51, 176, 203], dtype=uint8), 27: array([172, 114,  82], dtype=uint8), 22: array([202, 185,  52], dtype=uint8), 5: array([152, 223, 138], dtype=uint8), 20: array([ 66, 188, 102], dtype=uint8), 12: array([140,  86,  75], dtype=uint8), 15: array([219, 219, 141], dtype=uint8), 13: array([247, 182, 210], dtype=uint8), 14: array([227, 119, 194], dtype=uint8), 103: array([161, 145,  93], dtype=uint8), 21: array([140,  57, 197], dtype=uint8)}\n"
+      "cur scan id colors 28\n",
+      "new scan id colors 15\n"
      ]
     }
    ],
@@ -226,17 +231,24 @@
     "    # Convert Counter to dictionary with most frequent color\n",
     "    for object_id, color_counter in object_colors.items():\n",
     "        most_common_color = color_counter.most_common(1)[0][0]\n",
-    "        object_colors[object_id] = np.array(most_common_color)\n",
+    "        object_colors[object_id] = np.array(most_common_color[::-1])\n",
     "    \n",
     "    return object_colors\n",
     "\n",
     "colors = get_id_colours(data_dir,curr_scan_id)\n",
-    "print(colors)\n"
+    "print(\"cur scan id colors\", len(colors.keys()))\n",
+    "colors = get_id_colours(data_dir,new_scan_id)\n",
+    "print(\"new scan id colors\", len(colors.keys()))\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,15 +307,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "id mateches {1: (1, 0.12505533), 2: (14, 0.13002515), 3: (15, 0.1581792), 4: (4, 0.38794312), 5: (13, 0.108038306), 6: (18, 0.13620788), 7: (1, 0.094610825), 8: (18, 0.09619356), 9: (4, 0.089136675), 10: (1, 0.22594593), 11: (18, 0.06319812), 12: (18, 0.055987384), 13: (13, 0.074915074), 14: (13, 0.110690325), 15: (13, 0.09671134), 16: (13, 0.0922547), 17: (18, 0.04372708), 18: (13, 0.16703969), 19: (1, 0.044351965), 20: (13, 0.06187111), 21: (13, 0.08177689)}\n",
-      "the accuracy for the current features of the sam boundingboxes vs the gt boundingboxes is 0.019097222222222224\n"
+      "sg_data object ids of image dict_keys([1, 4, 13, 14, 15, 18])\n",
+      "img_data object ids of image dict_keys([1, 4, 13, 14, 15, 105])\n",
+      "id mateches {1: (1, 0.23035121), 4: (4, 0.35209072), 13: (13, 0.36667588), 14: (14, 0.3042687), 15: (15, 0.3384763), 105: (18, 0.14608717)}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 57\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid mateches\u001b[39m\u001b[38;5;124m\"\u001b[39m, id_matches)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m#assign each pixel to the new value, curr_scan_id , frame number is only for the size\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m new_img_pixelwise \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_pairs_pixel_level\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_sam_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mid_matches\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m#aggregate to patches and colour it, we want the colours which are used in curr_scan id\u001b[39;00m\n\u001b[1;32m     60\u001b[0m new_img_patchwise \u001b[38;5;241m=\u001b[39m quantize_to_patch_level(new_img_pixelwise)\n",
+      "Cell \u001b[0;32mIn[3], line 18\u001b[0m, in \u001b[0;36mgenerate_pairs_pixel_level\u001b[0;34m(data_dir, proj_scan_id, sam_data, frame_number, id_matches)\u001b[0m\n\u001b[1;32m     16\u001b[0m mask_id \u001b[38;5;241m=\u001b[39m seg_region[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#get to what the region mapped in the embeddings\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m matched_id \u001b[38;5;241m=\u001b[39m \u001b[43mid_matches\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask_id\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     19\u001b[0m mask \u001b[38;5;241m=\u001b[39m seg_region[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmask\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     20\u001b[0m new_ids[mask] \u001b[38;5;241m=\u001b[39m matched_id[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;66;03m#[0] is the id the second one is the error\u001b[39;00m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 2"
      ]
     }
    ],
@@ -331,18 +356,25 @@
     "    \n",
     "    return accuracy\n",
     "\n",
-    "new_scan_id = curr_scan_id\n",
+    "#new_scan_id = curr_scan_id\n",
     "\n",
     "\"\"\"\n",
     "initialize here current = new scan id since we are looking at the gt\n",
     "\"\"\"\n",
     "#read in all the data needed for the evaluation currently this tests the sam input against the ground truth of the input\n",
     "#sam features\n",
-    "input_featues_path = osp.join(data_dir,\"files/Features2D/sam/DinoV2\", new_scan_id + \".pkl\")\n",
+    "# input_featues_path = osp.join(data_dir,\"files/Features2D/sam/DinoV2\", new_scan_id + \".pkl\")\n",
+    "# with open(input_featues_path, 'rb') as file:\n",
+    "#     input_features = pickle.load(file)\n",
+    "# #sam data\n",
+    "# input_sam_data_path = osp.join(data_dir,\"files/sam_data\", new_scan_id, 'frame-{}.npy'.format(frame_number))\n",
+    "# input_sam_data = np.load(input_sam_data_path, allow_pickle=True)\n",
+    "#get the dinofeatures for the boundingboxes of the projection\n",
+    "input_featues_path = osp.join(data_dir,\"files/Features2D/projection/DinoV2\", new_scan_id + \".pkl\")\n",
     "with open(input_featues_path, 'rb') as file:\n",
     "    input_features = pickle.load(file)\n",
     "#sam data\n",
-    "input_sam_data_path = osp.join(data_dir,\"files/sam_data\", new_scan_id, 'frame-{}.npy'.format(frame_number))\n",
+    "input_sam_data_path = osp.join(data_dir,\"files/sam_data\", new_scan_id, 'frame-{}.npy'.format(new_frame_number))\n",
     "input_sam_data = np.load(input_sam_data_path, allow_pickle=True)\n",
     "\n",
     "#projection features of current situation\n",
@@ -354,10 +386,10 @@
     "compute the best match for each input on a patchwise level\n",
     "\"\"\"\n",
     "#closest pairs  fucking important lol !!!!!!!\n",
-    "id_matches = of_all_find_closes_pairs(curr_features[frame_number], input_features[frame_number])\n",
+    "id_matches = of_all_find_closes_pairs(curr_features[frame_number], input_features[new_frame_number])\n",
     "print(\"id mateches\", id_matches)\n",
     "\n",
-    "#assign each pixel to the new value, curr_scan_id is only for the size\n",
+    "#assign each pixel to the new value, curr_scan_id , frame number is only for the size\n",
     "new_img_pixelwise = generate_pairs_pixel_level(data_dir, curr_scan_id, input_sam_data,frame_number, id_matches)\n",
     "\n",
     "#aggregate to patches and colour it, we want the colours which are used in curr_scan id\n",
@@ -437,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
