--- a/preprocessing/feature_evaluation_sam.ipynb
+++ b/preprocessing/feature_evaluation_sam.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,11 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#given a gt patchwise matrix and a newly calculated matrix compute the accuracy\n",
+    "#aaparently this is not the same as accuracy\n",
     "def get_accuracy(gt_patches, computed_patches):\n",
     "    #make sure we dont do something dumm lol\n",
     "    assert gt_patches.shape == computed_patches.shape, \"Matrices must have the same shape\"\n",
@@ -290,45 +291,44 @@
     "    # Flatten matrices to iterate over each element\n",
     "    flat_gt = gt_patches.flatten()\n",
     "    flat_comp = computed_patches.flatten()\n",
+    "\n",
+    "    percentage = np.zeros_like(flat_gt)\n",
     "    \n",
     "    total_instances = len(flat_gt)\n",
     "    correct_instances = 0\n",
+    "\n",
+    "    #compute based on the other way\n",
+    "    for idx in range(len(percentage)):\n",
+    "        if flat_gt[idx] == flat_comp[idx]:\n",
+    "            percentage[idx] = 1\n",
     "    \n",
     "    # Count correct instances where IDs match\n",
     "    for id_gt, id_comp in zip(flat_gt, flat_comp):\n",
     "        if id_gt == id_comp:\n",
     "            correct_instances += 1\n",
+    "            \n",
     "    \n",
     "    # Compute accuracy\n",
     "    accuracy = correct_instances / total_instances\n",
     "    \n",
-    "    return accuracy"
+    "    return accuracy, np.mean(percentage)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sg_data object ids of image dict_keys([1, 4, 13, 14, 15, 18])\n",
-      "img_data object ids of image dict_keys([1, 4, 13, 14, 15, 105])\n",
-      "id mateches {1: (1, 0.23035121), 4: (4, 0.35209072), 13: (13, 0.36667588), 14: (14, 0.3042687), 15: (15, 0.3384763), 105: (18, 0.14608717)}\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "2",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/local/home/ekoller/R3Scan/files/Features2D/projection/DinoV2/fcf66d8a-622d-291c-8429-0e1109c6bb26.pkl'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 57\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid mateches\u001b[39m\u001b[38;5;124m\"\u001b[39m, id_matches)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m#assign each pixel to the new value, curr_scan_id , frame number is only for the size\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m new_img_pixelwise \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_pairs_pixel_level\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcurr_scan_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_sam_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43mframe_number\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mid_matches\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m#aggregate to patches and colour it, we want the colours which are used in curr_scan id\u001b[39;00m\n\u001b[1;32m     60\u001b[0m new_img_patchwise \u001b[38;5;241m=\u001b[39m quantize_to_patch_level(new_img_pixelwise)\n",
-      "Cell \u001b[0;32mIn[3], line 18\u001b[0m, in \u001b[0;36mgenerate_pairs_pixel_level\u001b[0;34m(data_dir, proj_scan_id, sam_data, frame_number, id_matches)\u001b[0m\n\u001b[1;32m     16\u001b[0m mask_id \u001b[38;5;241m=\u001b[39m seg_region[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobject_id\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#get to what the region mapped in the embeddings\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m matched_id \u001b[38;5;241m=\u001b[39m \u001b[43mid_matches\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmask_id\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m     19\u001b[0m mask \u001b[38;5;241m=\u001b[39m seg_region[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmask\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     20\u001b[0m new_ids[mask] \u001b[38;5;241m=\u001b[39m matched_id[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;66;03m#[0] is the id the second one is the error\u001b[39;00m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 2"
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 38\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m#read in all the data needed for the evaluation currently this tests the sam input against the ground truth of the input\u001b[39;00m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m#sam features\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# input_featues_path = osp.join(data_dir,\"files/Features2D/sam/DinoV2\", new_scan_id + \".pkl\")\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;66;03m# input_sam_data = np.load(input_sam_data_path, allow_pickle=True)\u001b[39;00m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;66;03m#get the dinofeatures for the boundingboxes of the projection\u001b[39;00m\n\u001b[1;32m     37\u001b[0m input_featues_path \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(data_dir,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfiles/Features2D/projection/DinoV2\u001b[39m\u001b[38;5;124m\"\u001b[39m, new_scan_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 38\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43minput_featues_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m     39\u001b[0m     input_features \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m#sam data\u001b[39;00m\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/local/home/ekoller/R3Scan/files/Features2D/projection/DinoV2/fcf66d8a-622d-291c-8429-0e1109c6bb26.pkl'"
      ]
     }
    ],
@@ -342,19 +342,27 @@
     "    # Flatten matrices to iterate over each element\n",
     "    flat_gt = gt_patches.flatten()\n",
     "    flat_comp = computed_patches.flatten()\n",
+    "\n",
+    "    percentage = np.zeros_like(flat_gt)\n",
     "    \n",
     "    total_instances = len(flat_gt)\n",
     "    correct_instances = 0\n",
+    "\n",
+    "    #compute based on the other way\n",
+    "    for idx in range(len(percentage)):\n",
+    "        if flat_gt[idx] == flat_comp[idx]:\n",
+    "            percentage[idx] = 1\n",
     "    \n",
     "    # Count correct instances where IDs match\n",
     "    for id_gt, id_comp in zip(flat_gt, flat_comp):\n",
     "        if id_gt == id_comp:\n",
     "            correct_instances += 1\n",
+    "            \n",
     "    \n",
     "    # Compute accuracy\n",
     "    accuracy = correct_instances / total_instances\n",
     "    \n",
-    "    return accuracy\n",
+    "    return accuracy, np.mean(percentage)\n",
     "\n",
     "#new_scan_id = curr_scan_id\n",
     "\n",
