--- a/preprocessing/dino_semantic/segment.ipynb
+++ b/preprocessing/dino_semantic/segment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "frame_idx = \"000006\"\n",
     "curr_frame_number = \"000008\"\n",
     "new_frame_number = \"000007\"\n",
-    "out_dir = \"/local/home/ekoller/R3Scan/files/Segmentation/Dinov2\" \n",
+    "out_dir = \"/local/home/ekoller/R3Scan/files/Segmentation/Dinov2/color\" \n",
     "patch_h= 18\n",
     "patch_w = 32\n",
     "patch_h_size = 30\n",
@@ -49,36 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of segmetned (960, 540, 3)\n",
-      "unique colours (7, 3)\n",
-      "Processing color: [  6  51 255], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "shape of segmetned (540, 960, 3)\n",
+      "unique colours (8, 3)\n",
+      "Processing color: [  6  51 255]\n",
       "colour done\n",
-      "Processing color: [ 70 184 160], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "Processing color: [ 70 184 160]\n",
       "colour done\n",
-      "Processing color: [80 49 50], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "Processing color: [80 49 50]\n",
       "colour done\n",
-      "Processing color: [120 120  80], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "Processing color: [120 120  80]\n",
       "colour done\n",
-      "Processing color: [120 120 120], unique mask values: [  0 255]\n",
-      "rectangle done\n",
-      "rectangle done\n",
+      "Processing color: [120 120 120]\n",
       "colour done\n",
-      "Processing color: [255   0  31], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "Processing color: [254   0  31]\n",
       "colour done\n",
-      "Processing color: [255   0 164], unique mask values: [  0 255]\n",
-      "rectangle done\n",
+      "Processing color: [255   0  31]\n",
+      "colour done\n",
+      "Processing color: [255   0 164]\n",
       "colour done\n"
      ]
     }
@@ -90,8 +84,7 @@
     "frame_path = osp.join(out_dir,  scan_id, \"frame-{}.jpg\".format(frame_idx))\n",
     "segmented_img = cv2.imread(frame_path)\n",
     "print(\"shape of segmetned\", segmented_img.shape)\n",
-    "#only rotate here because else problem with dimensions, will be corrected in segment_dino_pipe\n",
-    "segmented_img = cv2.rotate(segmented_img, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
+    "\n",
     "img_height, img_width, _ = segmented_img.shape  # Assuming the image is in RGB format\n",
     "\n",
     "# Initialize the new image\n",
@@ -135,17 +128,29 @@
     "for color in unique_colors:\n",
     "    # get the mask per colour\n",
     "    mask = cv2.inRange(patch_annos, color, color)\n",
-    "    print(f\"Processing color: {color}, unique mask values: {np.unique(mask)}\")\n",
+    "    print(\"Processing color:\", color) \n",
+    "    # display the result\n",
+    "    cv2.imshow('mask',mask)\n",
+    "    cv2.waitKey(0)\n",
+    "    cv2.destroyAllWindows()\n",
     "    \n",
     "\n",
     "    # get the individual components within that mask (connedted regions) using 8 neighboudhood connectvity\n",
     "    num_labels, labels, stats, centroids = cv2.connectedComponentsWithStats(mask, connectivity=8)\n",
+    "    \n",
     "    #visualize the rectangles\n",
     "    for i in range(1, num_labels):  # Start from 1 to skip the background\n",
     "        x, y, w, h, area = stats[i]\n",
     "        edges = np.random.randint(0, 256, size=3)\n",
     "        cv2.rectangle(output_img, (x, y), (x+w, y+h), [25,167,88], 2)  # Green bounding box\n",
-    "        print(\"rectangle done\")\n",
+    "        \n",
+    "          # Extract the mask for the current component\n",
+    "        component_mask = (labels == i).astype(np.uint8) *225\n",
+    "        # display the result\n",
+    "        cv2.imshow('component mask', component_mask)\n",
+    "        cv2.waitKey(0)\n",
+    "        cv2.destroyAllWindows()\n",
+    "        \n",
     "    print(\"colour done\")\n",
     "\n",
     "\n",
