--- a/preprocessing/dino_semantic/segment.ipynb
+++ b/preprocessing/dino_semantic/segment.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "frame_idx = \"000006\"\n",
     "curr_frame_number = \"000008\"\n",
     "new_frame_number = \"000007\"\n",
-    "out_dir = \"/local/home/ekoller/R3Scan/files/Segmentation/Dinov2/color\" \n",
+    "out_dir = \"/local/home/ekoller/R3Scan/files/Segmentation/DinoV2/color\" \n",
     "patch_h= 18\n",
     "patch_w = 32\n",
     "patch_h_size = 30\n",
@@ -49,31 +49,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "shape of segmetned (540, 960, 3)\n",
-      "unique colours (8, 3)\n",
-      "Processing color: [  6  51 255]\n",
-      "colour done\n",
-      "Processing color: [ 70 184 160]\n",
-      "colour done\n",
-      "Processing color: [80 49 50]\n",
-      "colour done\n",
-      "Processing color: [120 120  80]\n",
-      "colour done\n",
-      "Processing color: [120 120 120]\n",
-      "colour done\n",
-      "Processing color: [254   0  31]\n",
-      "colour done\n",
-      "Processing color: [255   0  31]\n",
-      "colour done\n",
-      "Processing color: [255   0 164]\n",
-      "colour done\n"
+      "[ WARN:0@335890.344] global loadsave.cpp:248 findDecoder imread_('/local/home/ekoller/R3Scan/files/Segmentation/DinoV2/color/02b33e01-be2b-2d54-93fb-4145a709cec5/frame-000006.jpg'): can't open/read file: check file path/integrity\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m frame_path \u001b[38;5;241m=\u001b[39m osp\u001b[38;5;241m.\u001b[39mjoin(out_dir,  scan_id, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mframe-\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(frame_idx))\n\u001b[1;32m      5\u001b[0m segmented_img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(frame_path)\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshape of segmetned\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43msegmented_img\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m)\n\u001b[1;32m      8\u001b[0m img_height, img_width, _ \u001b[38;5;241m=\u001b[39m segmented_img\u001b[38;5;241m.\u001b[39mshape  \u001b[38;5;66;03m# Assuming the image is in RGB format\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;66;03m# Initialize the new image\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'shape'"
      ]
     }
    ],
@@ -130,9 +124,9 @@
     "    mask = cv2.inRange(patch_annos, color, color)\n",
     "    print(\"Processing color:\", color) \n",
     "    # display the result\n",
-    "    cv2.imshow('mask',mask)\n",
-    "    cv2.waitKey(0)\n",
-    "    cv2.destroyAllWindows()\n",
+    "    # cv2.imshow('mask',mask)\n",
+    "    # cv2.waitKey(0)\n",
+    "    # cv2.destroyAllWindows()\n",
     "    \n",
     "\n",
     "    # get the individual components within that mask (connedted regions) using 8 neighboudhood connectvity\n",
@@ -145,11 +139,12 @@
     "        cv2.rectangle(output_img, (x, y), (x+w, y+h), [25,167,88], 2)  # Green bounding box\n",
     "        \n",
     "          # Extract the mask for the current component\n",
-    "        component_mask = (labels == i).astype(np.uint8) *225\n",
+    "        component_mask = (labels == i).astype(np.uint8)\n",
+    "        print(\"component mask\", component_mask) \n",
     "        # display the result\n",
-    "        cv2.imshow('component mask', component_mask)\n",
-    "        cv2.waitKey(0)\n",
-    "        cv2.destroyAllWindows()\n",
+    "        # cv2.imshow('component mask', component_mask)\n",
+    "        # cv2.waitKey(0)\n",
+    "        # cv2.destroyAllWindows()\n",
     "        \n",
     "    print(\"colour done\")\n",
     "\n",
@@ -163,14 +158,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shape of segmetned (960, 540, 3)\n"
+      "shape of segmetned (540, 960, 3)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "attempt to get argmax of an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[36], line 29\u001b[0m\n\u001b[1;32m     27\u001b[0m reshaped_patch \u001b[38;5;241m=\u001b[39m patch_anno\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, patch_anno\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m2\u001b[39m])\n\u001b[1;32m     28\u001b[0m colors, counts \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39munique(reshaped_patch, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, return_counts\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 29\u001b[0m max_idx \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcounts\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m max_count \u001b[38;5;241m=\u001b[39m counts[max_idx]\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(max_count \u001b[38;5;241m>\u001b[39m th\u001b[38;5;241m*\u001b[39mpatch_size):\n",
+      "File \u001b[0;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36margmax\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/numpy/core/fromnumeric.py:1242\u001b[0m, in \u001b[0;36margmax\u001b[0;34m(a, axis, out, keepdims)\u001b[0m\n\u001b[1;32m   1155\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1156\u001b[0m \u001b[38;5;124;03mReturns the indices of the maximum values along an axis.\u001b[39;00m\n\u001b[1;32m   1157\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1239\u001b[0m \u001b[38;5;124;03m(2, 1, 4)\u001b[39;00m\n\u001b[1;32m   1240\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   1241\u001b[0m kwds \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkeepdims\u001b[39m\u001b[38;5;124m'\u001b[39m: keepdims} \u001b[38;5;28;01mif\u001b[39;00m keepdims \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m np\u001b[38;5;241m.\u001b[39m_NoValue \u001b[38;5;28;01melse\u001b[39;00m {}\n\u001b[0;32m-> 1242\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43margmax\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mout\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/anaconda3/envs/BT/lib/python3.8/site-packages/numpy/core/fromnumeric.py:57\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[0;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m---> 57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mbound\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;66;03m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;66;03m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     64\u001b[0m     \u001b[38;5;66;03m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;66;03m# exception has a traceback chain.\u001b[39;00m\n\u001b[1;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "\u001b[0;31mValueError\u001b[0m: attempt to get argmax of an empty sequence"
      ]
     }
    ],
