started to work on evaluaion: idea take one scene and let it run for every new scene frame & calculate the accuracy + visualize the image to see whats up

--- a/preprocessing/visualization_feature_vectors_2D.ipynb
+++ b/preprocessing/visualization_feature_vectors_2D.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,10 @@
     "from sklearn.decomposition import PCA\n",
     "from matplotlib.cm import get_cmap\n",
     "import numpy as np\n",
+    "import open3d as o3d\n",
+    "import numpy as np\n",
+    "from sklearn.manifold import MDS\n",
+    "from sklearn.cluster import KMeans\n",
     "import open3d as o3d\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
